--- a/static/css/index.css
+++ b/static/css/index.css
@@ -11,6 +11,13 @@ body{
   display: flex;
 }
 
+.result {
+  font-style: normal;
+  font-family: sans-serif;
+  font-variant: inherit;
+  display: contents;
+}
+
 .searchTerm {
   width: 100%;
   border: 3px solid #00B4CC;
@@ -37,7 +44,13 @@ body{
   cursor: pointer;
   font-size: 20px;
 }
-
+.centerImage
+{
+  left: 45%;
+ text-align:center;
+ display:block;
+ position: sticky;
+}
 /*Resize the wrap to see the search bar change!*/
 .wrap{
   width: 30%;
