- UI changed to show actual data - Stemmer modified to accept query - Flow of the search engine is implemented - Data can be retrieved on the fly and processed. - Complete project has been done.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -63,8 +63,50 @@ body{
 /*Resize the wrap to see the search bar change!*/
 .result{
   width: 30%;
-  position: absolute;
-  top: 30%;
+  position: center;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
+
+
+	body {
+	font-family: Helvetica, Arial, sans-serif;
+	}
+
+	.table {
+	width: 90%;
+	margin:100px auto;
+	table-layout:fixed;
+	border-collapse: collapse;
+	}
+
+	.td {
+	padding:1em 0 0 0;
+	vertical-align:bottom;
+	background-image:radial-gradient(black 1px, white 0px);
+	background-size: 8px 8px;
+	background-repeat:repeat-x;
+	background-position: left bottom;
+	}
+
+	.td span{
+   	background-color:#fff;
+	}
+
+	.td:first-child {
+	text-align: left;
+	font-weight: 700;
+	}
+
+	.td:first-child span{
+	padding-right:.25em;
+	}
+
+  	.td:last-child {
+	text-align:right;
+	width:3em;
+  	}
+
+  	.td:last-child span{
+	padding-left:.25em;
+	}
