--- a/templates/index.html
+++ b/templates/index.html
@@ -57,10 +57,10 @@
         <table class="table" align="center">
             <tr>
                 <td>SN</td>
-                <td>Tweet</td>
-                <td>Cosine Similarity</td>
-                <td>Relevant Feedback</td>
-                <td>Irelevant Feedback</td>
+                <td><strong>Tweet</strong></td>
+                <td><strong>Cosine Similarity</strong></td>
+                <td><strong>Relevant Feedback</strong></td>
+                <td><strong>Irelevant Feedback</strong></td>
             </tr>
             {% for key, value in ranked_tweets.items %}
             <tr>
